--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "name": "lark_bot",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Discord LostArk Rade Manager Bot with discord.js",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Moong-bee/lark_bot.git"
+  },
   "author": "Moong-bee",
-  "license": "ISC",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Moong-bee/lark_bot/issue"
+  },
+  "homepage": "https://github.com/Moong-bee/lark_bot.git#Readme",
   "dependencies": {
-    "discord.js": "^13.0.1",
-    "mongoose": "^5.13.6",
-    "nanoid": "^3.1.23"
+    "discord.js": "^12.5.3",
+    "moment-timezone": "^0.5.32",
+    "mongoose": "^5.10.15",
+    "nanoid": "^3.1.23",
+    "node-schedule": "^1.3.2",
+    "topgg-autoposter": "^2.0.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0"
