--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "app.js",
 	"scripts": {
 		"start": "node app.js",
-		"test": "nodemon --watch app.js"
+		"test": "nodemon app.js"
 	},
 	"repository": {
 		"type": "git",
@@ -18,6 +18,10 @@
 	},
 	"homepage": "https://github.com/Moong-bee/lark_bot.git#Readme",
 	"dependencies": {
+		"@discordjs/builders": "^0.6.0",
+		"@discordjs/rest": "0.1.0-canary.0",
+		"dayjs": "^1.10.6",
+		"discord-api-types": "^0.22.0",
 		"discord.js": "^12.5.3",
 		"moment-timezone": "^0.5.32",
 		"mongoose": "^5.10.15",
