--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 	"dependencies": {
 		"@discordjs/builders": "^0.6.0",
 		"@discordjs/rest": "0.1.0-canary.0",
+		"axios": "^0.21.1",
+		"cheerio": "^1.0.0-rc.10",
 		"dayjs": "^1.10.6",
 		"discord-api-types": "^0.22.0",
 		"discord.js": "^12.5.3",
