--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"moment-timezone": "^0.5.32",
 		"mongoose": "^6.0.1",
 		"nanoid": "^3.1.25",
+		"node-cron": "^3.0.0",
 		"node-schedule": "^1.3.2",
 		"topgg-autoposter": "^2.0.0"
 	},
